@@ -1,5 +1,11 @@
 2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_font.cpp: 
+	* gameswf/gameswf_freetype.*: added handler of bold & italic (dynamic fonts)
+	* gameswf/plugins/lib3ds/gameswf_3ds.cpp: fixed compiler warning
+
+2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf.h,
 	* gameswf/gameswf_font.*,
 	* gameswf/gameswf_text.*,
